; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/crypto/extr_padlock-aes.c_padlock_reset_key.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/crypto/extr_padlock-aes.c_padlock_reset_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cword = type { i32 }

@last_cword = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cword*)* @padlock_reset_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @padlock_reset_key(%struct.cword* %0) #0 {
  %2 = alloca %struct.cword*, align 8
  %3 = alloca i32, align 4
  store %struct.cword* %0, %struct.cword** %2, align 8
  %4 = call i32 (...) @raw_smp_processor_id()
  store i32 %4, i32* %3, align 4
  %5 = load %struct.cword*, %struct.cword** %2, align 8
  %6 = load i32, i32* @last_cword, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.cword* @per_cpu(i32 %6, i32 %7)
  %9 = icmp ne %struct.cword* %5, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  call void asm sideeffect "pushfl; popfl", "~{dirflag},~{fpsr},~{flags}"() #2, !srcloc !2
  br label %11

11:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @raw_smp_processor_id(...) #1

declare dso_local %struct.cword* @per_cpu(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 431}
